chore(demo): refactor and compile demo page

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>The Mask for Vue.js</title>
+    <title>Input Facade for Vue.js</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.css">
     <link rel="stylesheet" href="./style.css">
@@ -11,14 +11,14 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">vue-input-facade</h1>
-      <h2 class="project-tagline">The Mask input for Vue.js</h2>
+      <h2 class="project-tagline">Input Facade input for Vue.js</h2>
       <a href="http://github.com/ronaldjerez/vue-input-facade" class="btn">View on GitHub</a>
     </section>
 
     <section class="main-content">
-      <h2>The Mask input for Vue.js</h2>
+      <h2>Input Facade input for Vue.js</h2>
 
-      <p>A lightweight (2KB gzipped) and dependency free mask input created specific for Vue.js</p>
+      <p>A lightweight and dependency free input facade created specific for Vue.js</p>
 
       <div id="app">
         loading...
