--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>Vue Input Facade</title></head><body><div id="rsg-root"></div><script src="build/chunk-vendors.484e49ba.js"></script><script src="build/bundle.c8efcff9.js"></script></body></html>
+<!DOCTYPE html>
+<html>
+    <meta charset="utf-8">
+    <title>Redirecting to latest docs</title>
+    <meta http-equiv="refresh" content="0; URL=./latest/">
+    <link rel="canonical" href="./latest/">
+    <body> 
+        <p>This page has moved, <a href="./latest/">click here to access the new location</a>.</p> 
+    </body>
+</html>
